@@ -551,6 +551,9 @@ sub logger {
 		  if (open ($log, ">>$config->{logdir}/munin-graph.log"))
 		  {
 			  print $log "$now - $comment\n";
+			  $log->flush;
+			  close (STDERR);
+			  open (STDERR, ">&", $log);
 		  }
 		  else
 		  {
